--- a/CódigoProjeto.ipynb
+++ b/CódigoProjeto.ipynb
@@ -16,7 +16,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "ZSj2T-fEzHmb"
       },
@@ -38,7 +38,7 @@
       "metadata": {
         "id": "MCH30y8fjqBt"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -55,7 +55,7 @@
       "metadata": {
         "id": "jnmu0jmZZChj"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -71,9 +71,10 @@
         "outputId": "e0d8e6a5-3ace-46ab-da50-09868a0f9c45",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "collapsed": true
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -134,9 +135,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 293
-        }
+        },
+        "collapsed": true
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -461,9 +463,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "collapsed": true
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -800,9 +803,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "collapsed": true
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1153,9 +1157,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 363
-        }
+        },
+        "collapsed": true
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1581,9 +1586,10 @@
           "height": 206
         },
         "id": "bwslRVq9qKk2",
-        "outputId": "f2babdba-b6b6-4d30-ddc8-710881daed7c"
+        "outputId": "f2babdba-b6b6-4d30-ddc8-710881daed7c",
+        "collapsed": true
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1885,9 +1891,10 @@
           "height": 206
         },
         "id": "9UK8poDvzq-a",
-        "outputId": "eea42ca2-3960-4ca8-e3c0-21a1e54de2ca"
+        "outputId": "eea42ca2-3960-4ca8-e3c0-21a1e54de2ca",
+        "collapsed": true
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2238,9 +2245,10 @@
           "height": 363
         },
         "id": "UDQWYty5YRcb",
-        "outputId": "871270c7-376c-4daf-87c2-a0c73ebd323e"
+        "outputId": "871270c7-376c-4daf-87c2-a0c73ebd323e",
+        "collapsed": true
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2660,9 +2668,10 @@
           "height": 206
         },
         "id": "mgF05tpdHDne",
-        "outputId": "8f4ede44-dbb9-4c7d-be69-52c0ac9cf449"
+        "outputId": "8f4ede44-dbb9-4c7d-be69-52c0ac9cf449",
+        "collapsed": true
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2960,7 +2969,7 @@
       "metadata": {
         "id": "7cVDKFdpHji3"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2978,9 +2987,10 @@
           "height": 363
         },
         "id": "kGLMdnixH2R_",
-        "outputId": "f3d6084b-2577-4222-c1f0-dbc4bc0bf7ae"
+        "outputId": "f3d6084b-2577-4222-c1f0-dbc4bc0bf7ae",
+        "collapsed": true
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3395,9 +3405,10 @@
           "height": 363
         },
         "id": "2FMQszfvMdaW",
-        "outputId": "5c3287c8-360d-4fce-a34b-a007e1f43034"
+        "outputId": "5c3287c8-360d-4fce-a34b-a007e1f43034",
+        "collapsed": true
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3818,6 +3829,50 @@
     {
       "cell_type": "code",
       "source": [
+        "# Contar valores zerados no ExportacaoSp\n",
+        "contagem_zeros_sp = (ExportacaoSp == 0).sum()\n",
+        "\n",
+        "# Filtrando dados\n",
+        "colunas_relevantes = ['CO_ANO', 'CO_MES', 'SG_UF_MUN', 'KG_LIQUIDO', 'VL_FOB', 'Nome_Municipio', 'Produto_SH4', 'PAIS_DESTINO', 'Valor_Agregado']\n",
+        "contagem_zeros_sp = (ExportacaoSp[colunas_relevantes] == 0).sum()\n",
+        "\n",
+        "# Criar uma tabela com os resultados\n",
+        "tabela_zeros_sp = pd.DataFrame(contagem_zeros_sp).reset_index()\n",
+        "tabela_zeros_sp.columns = ['Coluna', 'Qtd_Valores_Zerados']\n",
+        "\n",
+        "# Exibir a tabela\n",
+        "print(tabela_zeros_sp)"
+      ],
+      "metadata": {
+        "id": "ANVGs6ivz1BB",
+        "outputId": "8687317a-e220-4fe6-e3a3-5d2fe61cb03e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "           Coluna  Qtd_Valores_Zerados\n",
+            "0          CO_ANO                    0\n",
+            "1          CO_MES                    0\n",
+            "2       SG_UF_MUN                    0\n",
+            "3      KG_LIQUIDO                88158\n",
+            "4          VL_FOB                 2453\n",
+            "5  Nome_Municipio                    0\n",
+            "6     Produto_SH4                    0\n",
+            "7    PAIS_DESTINO                    0\n",
+            "8  Valor_Agregado                88802\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Salvando o arquivo\n",
         "ExportacaoSp.to_csv(\"ExportacaoSP.csv\", sep=\";\", index=False, encoding=\"utf-8\")\n",
         "\n",
@@ -3826,19 +3881,19 @@
       ],
       "metadata": {
         "id": "dmPYPNtqJAI2",
-        "outputId": "93d1f5d7-440e-4adf-a75a-cb6bc85a4c4a",
+        "outputId": "114bc317-419a-43ae-ccb8-c33086d49c22",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         }
       },
-      "execution_count": 18,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "['.config', 'ExportacaoSP.csv', 'sample_data']\n"
+            "['.config', 'ExportacaoSP.csv', 'TabelaZeros.csv', 'tabela_zeros.csv', 'sample_data']\n"
           ]
         },
         {
@@ -3900,12 +3955,27 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_2116f353-b4bb-4a90-ad5d-2414210a3a56\", \"ExportacaoSP.csv\", 183702088)"
+              "download(\"download_2a9e72df-7c2a-43ed-aaa5-8e0253cec76b\", \"ExportacaoSP.csv\", 194171672)"
             ]
           },
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Salvando o arquivo\n",
+        "tabela_zeros_sp.to_csv(\"tabelas_zeros_sp.csv\", sep=\";\", index=False, encoding=\"utf-8\")\n",
+        "\n",
+        "print(os.listdir())\n",
+        "files.download(\"tabela_zeros_sp.csv\")"
+      ],
+      "metadata": {
+        "id": "ex3mHqdl3jIw"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
