alteração no nome do arquivo tabelas_zeros_sp

--- a/CódigoProjeto.ipynb
+++ b/CódigoProjeto.ipynb
@@ -3829,6 +3829,7 @@
     {
       "cell_type": "code",
       "source": [
+        "\n",
         "# Contar valores zerados no ExportacaoSp\n",
         "contagem_zeros_sp = (ExportacaoSp == 0).sum()\n",
         "\n",
@@ -3844,13 +3845,13 @@
         "print(tabela_zeros_sp)"
       ],
       "metadata": {
-        "id": "ANVGs6ivz1BB",
-        "outputId": "8687317a-e220-4fe6-e3a3-5d2fe61cb03e",
+        "id": "1pTITHCcJoXT",
+        "outputId": "6c88b70b-637c-4f52-a6bd-c8ca1e1b8d46",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 46,
+      "execution_count": 83,
       "outputs": [
         {
           "output_type": "stream",
@@ -3881,19 +3882,19 @@
       ],
       "metadata": {
         "id": "dmPYPNtqJAI2",
-        "outputId": "114bc317-419a-43ae-ccb8-c33086d49c22",
+        "outputId": "10ea4b73-0f6f-4038-de3c-91d0887e1fd5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         }
       },
-      "execution_count": 47,
+      "execution_count": 86,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "['.config', 'ExportacaoSP.csv', 'TabelaZeros.csv', 'tabela_zeros.csv', 'sample_data']\n"
+            "['.config', 'ExportacaoSP.csv', 'tabelas_zeros_sp.csv', 'sample_data']\n"
           ]
         },
         {
@@ -3955,7 +3956,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_2a9e72df-7c2a-43ed-aaa5-8e0253cec76b\", \"ExportacaoSP.csv\", 194171672)"
+              "download(\"download_cc2530e9-4ef3-4913-be91-8bf8c096c936\", \"ExportacaoSP.csv\", 194171778)"
             ]
           },
           "metadata": {}
@@ -3969,13 +3970,90 @@
         "tabela_zeros_sp.to_csv(\"tabelas_zeros_sp.csv\", sep=\";\", index=False, encoding=\"utf-8\")\n",
         "\n",
         "print(os.listdir())\n",
-        "files.download(\"tabela_zeros_sp.csv\")"
+        "files.download(\"tabelas_zeros_sp.csv\")"
       ],
       "metadata": {
-        "id": "ex3mHqdl3jIw"
+        "id": "hccX23S4G6NY",
+        "outputId": "96227e8c-fe6e-4eca-eb3a-a8a16aa0cd17",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 85,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['.config', 'ExportacaoSP.csv', 'tabelas_zeros_sp.csv', 'sample_data']\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "\n",
+              "    async function download(id, filename, size) {\n",
+              "      if (!google.colab.kernel.accessAllowed) {\n",
+              "        return;\n",
+              "      }\n",
+              "      const div = document.createElement('div');\n",
+              "      const label = document.createElement('label');\n",
+              "      label.textContent = `Downloading \"${filename}\": `;\n",
+              "      div.appendChild(label);\n",
+              "      const progress = document.createElement('progress');\n",
+              "      progress.max = size;\n",
+              "      div.appendChild(progress);\n",
+              "      document.body.appendChild(div);\n",
+              "\n",
+              "      const buffers = [];\n",
+              "      let downloaded = 0;\n",
+              "\n",
+              "      const channel = await google.colab.kernel.comms.open(id);\n",
+              "      // Send a message to notify the kernel that we're ready.\n",
+              "      channel.send({})\n",
+              "\n",
+              "      for await (const message of channel.messages) {\n",
+              "        // Send a message to notify the kernel that we're ready.\n",
+              "        channel.send({})\n",
+              "        if (message.buffers) {\n",
+              "          for (const buffer of message.buffers) {\n",
+              "            buffers.push(buffer);\n",
+              "            downloaded += buffer.byteLength;\n",
+              "            progress.value = downloaded;\n",
+              "          }\n",
+              "        }\n",
+              "      }\n",
+              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
+              "      const a = document.createElement('a');\n",
+              "      a.href = window.URL.createObjectURL(blob);\n",
+              "      a.download = filename;\n",
+              "      div.appendChild(a);\n",
+              "      a.click();\n",
+              "      div.remove();\n",
+              "    }\n",
+              "  "
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "download(\"download_61188122-69b2-4e07-9557-9e57b9b10c89\", \"tabelas_zeros_sp.csv\", 153)"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
     }
   ]
 }
