--- a/CódigoProjeto.ipynb
+++ b/CódigoProjeto.ipynb
@@ -16,7 +16,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 111,
+      "execution_count": null,
       "metadata": {
         "id": "ZSj2T-fEzHmb"
       },
@@ -24,8 +24,7 @@
       "source": [
         "import pandas as pd\n",
         "import os\n",
-        "from google.colab import files\n",
-        "import unicodedata"
+        "from google.colab import files"
       ]
     },
     {
@@ -34,12 +33,12 @@
         "# Conectando e baixando arquivos do GitHub\n",
         "\n",
         "arquivos = [\"DadosBase2023.csv\", \"DadosBase2024.csv\", \"SH.csv\", \"NomesMunicipios.csv\", \"Paises.csv\",]\n",
-        "url_base = \"https://raw.githubusercontent.com/Lucasdz-7/Projeto-Integrador-1/main/Projeto/\"\n"
+        "url_base = \"https://raw.githubusercontent.com/Lucasdz-7/Projeto-Integrador-1/main/Projeto/\""
       ],
       "metadata": {
         "id": "MCH30y8fjqBt"
       },
-      "execution_count": 112,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -58,7 +57,7 @@
       "metadata": {
         "id": "jnmu0jmZZChj"
       },
-      "execution_count": 113,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -77,7 +76,7 @@
         },
         "collapsed": true
       },
-      "execution_count": 114,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -141,7 +140,7 @@
         },
         "collapsed": true
       },
-      "execution_count": 115,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -469,7 +468,7 @@
         },
         "collapsed": true
       },
-      "execution_count": 116,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -809,7 +808,7 @@
         },
         "collapsed": true
       },
-      "execution_count": 117,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1163,7 +1162,7 @@
           "height": 363
         }
       },
-      "execution_count": 118,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1603,7 +1602,7 @@
         "outputId": "4cddea38-fb93-4dbb-c717-0dd0e4bd0cbf",
         "collapsed": true
       },
-      "execution_count": 119,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1915,7 +1914,7 @@
         "id": "mM7xtSraMBYm",
         "outputId": "3961b7e3-7e86-4dc9-b97d-7af4d899c7af"
       },
-      "execution_count": 120,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2219,7 +2218,7 @@
         "id": "zTItS59dMu_q",
         "outputId": "15f9044f-56fe-4e20-a82c-b98e31448408"
       },
-      "execution_count": 121,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2534,7 +2533,7 @@
           "height": 520
         }
       },
-      "execution_count": 123,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2949,7 +2948,7 @@
         "outputId": "0fd688ca-13e3-4a39-b660-b2b0d7e3c8fa",
         "collapsed": true
       },
-      "execution_count": 124,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5353,98 +5352,6 @@
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Salvando o arquivo NCM\n",
-        "NCM.to_csv(\"NCM.csv\", sep=\";\", index=False, encoding=\"ISO-8859-1\")\n",
-        "\n",
-        "print(os.listdir())\n",
-        "files.download(\"NCM.csv\")"
-      ],
-      "metadata": {
-        "id": "EndDqvlDgJpH",
-        "outputId": "bc175d87-fa58-4a87-b461-78763e1c2ecc",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
-      },
-      "execution_count": 125,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "['.config', 'NCM.csv', 'sample_data']\n"
-          ]
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ],
-            "application/javascript": [
-              "\n",
-              "    async function download(id, filename, size) {\n",
-              "      if (!google.colab.kernel.accessAllowed) {\n",
-              "        return;\n",
-              "      }\n",
-              "      const div = document.createElement('div');\n",
-              "      const label = document.createElement('label');\n",
-              "      label.textContent = `Downloading \"${filename}\": `;\n",
-              "      div.appendChild(label);\n",
-              "      const progress = document.createElement('progress');\n",
-              "      progress.max = size;\n",
-              "      div.appendChild(progress);\n",
-              "      document.body.appendChild(div);\n",
-              "\n",
-              "      const buffers = [];\n",
-              "      let downloaded = 0;\n",
-              "\n",
-              "      const channel = await google.colab.kernel.comms.open(id);\n",
-              "      // Send a message to notify the kernel that we're ready.\n",
-              "      channel.send({})\n",
-              "\n",
-              "      for await (const message of channel.messages) {\n",
-              "        // Send a message to notify the kernel that we're ready.\n",
-              "        channel.send({})\n",
-              "        if (message.buffers) {\n",
-              "          for (const buffer of message.buffers) {\n",
-              "            buffers.push(buffer);\n",
-              "            downloaded += buffer.byteLength;\n",
-              "            progress.value = downloaded;\n",
-              "          }\n",
-              "        }\n",
-              "      }\n",
-              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
-              "      const a = document.createElement('a');\n",
-              "      a.href = window.URL.createObjectURL(blob);\n",
-              "      a.download = filename;\n",
-              "      div.appendChild(a);\n",
-              "      a.click();\n",
-              "      div.remove();\n",
-              "    }\n",
-              "  "
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ],
-            "application/javascript": [
-              "download(\"download_b964d6d0-8ee2-434c-9429-fc05526c030d\", \"NCM.csv\", 180732)"
-            ]
-          },
-          "metadata": {}
-        }
-      ]
     }
   ]
 }
